# hideme

./: .gitignore  Cargo.toml  NOTES.md  README.md  hideme.sublime-project
.github/workflows/: build_debug_main.yml  build_main.yml
src/: main.rs  render_state.rs  shader.wgsl
src/render_state/: image_texture.rs
